--- a/src/page/Main.css
+++ b/src/page/Main.css
@@ -1,6 +1,5 @@
 .main-content {
-    max-width: 1000px;
-    width: 110%;
+    width: 1000px;
     min-height: 400px;
     height: 700px;
     padding: 18px 18px 120px 18px;
